Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4984

Translations of QNativeSocketEngine's error string are not used

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.6.0
    • 4.5.2
    • Network
    • None
    • ee52cd0bb8ec4f5f74efc9c26be81dd93f1881c8

    Description

      Steps to reproduce / test case:

      For example, in the file "qt_fr.ts" supplied with Qt 4.5.2, there is a "QNativeSocketEngine" context with 26 translated string. However these translations (socket errors) are never used by Qt. The only socket errors that are correctly translated are those coming from the "QAbstractSocket" context.

      The problem seems to come from the fact that QNativeSocketEnginePrivate::setError() uses QT_TRANSLATE_NOOP, but they are then directly returned by QAbstractSocket::errorString(), without going through a tr() or translate() call.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mgoetz Markus Goetz (Inactive)
            sthomass Stian Sandvik Thomassen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes